@@ -3,7 +3,7 @@
  *	parallel jobs.
  *****************************************************************************
  *  Copyright (C) 2002-2007 The Regents of the University of California.
- *  Copyright (C) 2008-2009 Lawrence Livermore National Security.
+ *  Copyright (C) 2008-2010 Lawrence Livermore National Security.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
  *  Written by Mark Grondona <grondona@llnl.gov>, et. al.
  *  CODE-OCEC-09-009. All rights reserved.
@@ -135,7 +135,7 @@ int    retry_step_cnt = 0;
 static int   _become_user (void);
 static int   _call_spank_local_user (srun_job_t *job);
 static void  _define_symbols(void);
-static void  _handle_intr();
+static void  _handle_intr(void);
 static void  _handle_pipe(int signo);
 static void  _handle_signal(int signo);
 static void  _print_job_information(resource_allocation_response_msg_t *resp);
@@ -145,7 +145,8 @@ static void  _run_srun_epilog (srun_job_t *job);
 static int   _run_srun_script (srun_job_t *job, char *script);
 static void  _set_cpu_env_var(resource_allocation_response_msg_t *resp);
 static void  _set_exit_code(void);
-static int   _setup_signals();
+static int   _setup_signals(void);
+static void  _spawn_mpir_thread(void);
 static void  _step_opt_exclusive(void);
 static void  _set_stdio_fds(srun_job_t *job, slurm_step_io_fds_t *cio_fds);
 static void  _set_submit_dir_env(void);
@@ -156,6 +157,7 @@ static int   _slurm_debug_env_val (void);
 static void  _task_start(launch_tasks_response_msg_t *msg);
 static void  _task_finish(task_exit_msg_t *msg);
 static char *_uint16_array_to_str(int count, const uint16_t *array);
+static void *_wait_mpir_gate(void *arg);
 
 /*
  * from libvirt-0.6.2 GPL2
@@ -473,6 +475,7 @@ int srun(int ac, char **av)
 					    launch_params.argv[0]);
 		else
 			mpir_set_executable_names(launch_params.argv[0]);
+		_spawn_mpir_thread();
 		MPIR_debug_state = MPIR_DEBUG_SPAWNED;
 		MPIR_Breakpoint();
 		if (opt.debugger_test)
@@ -483,7 +486,8 @@ int srun(int ac, char **av)
 	}
 
 	slurm_step_launch_wait_finish(job->step_ctx);
-	if (retry_step_begin && (retry_step_cnt < MAX_STEP_RETRIES)) {
+	if ((MPIR_being_debugged == 0) && retry_step_begin && 
+	    (retry_step_cnt < MAX_STEP_RETRIES)) {
 		retry_step_begin = false;
 		slurm_step_ctx_destroy(job->step_ctx);
 		if (got_alloc) {
@@ -517,6 +521,45 @@ cleanup:
 	if (WIFEXITED(global_rc))
 		global_rc = WEXITSTATUS(global_rc);
 	return (int)global_rc;
+}
+
+static void _spawn_mpir_thread(void)
+{
+	int i;
+	pthread_t thread_id;
+	pthread_attr_t attr;
+	bool launched = false;
+
+	if (!MPIR_being_debugged)
+		return;
+
+	slurm_attr_init(&attr);
+	pthread_attr_setdetachstate(&attr, PTHREAD_CREATE_DETACHED);
+	for (i=0; i<3; i++) {
+		if (i)
+			usleep(100000);
+		if (pthread_create(&thread_id, &attr, &_wait_mpir_gate, 
+				   NULL) == 0) {
+			launched = true;
+			break;
+		}
+	}
+	slurm_attr_destroy(&attr);
+	if (!launched)
+		fatal("pthread_create: %m");
+}
+
+static void *_wait_mpir_gate(void *arg)
+{
+	while (job->state == SRUN_JOB_RUNNING) {
+		if (MPIR_debug_gate) {
+			slurm_step_launch_fwd_signal(job->step_ctx, 
+						     SIG_DEBUG_WAKE);
+			break;
+		}
+		usleep(100000);
+	}
+	pthread_exit(NULL);
 }
 
 static slurm_step_layout_t *
@@ -1282,7 +1325,7 @@ _task_finish(task_exit_msg_t *msg)
 		_setup_max_wait_timer();
 }
 
-static void _handle_intr()
+static void _handle_intr(void)
 {
 	static time_t last_intr      = 0;
 	static time_t last_intr_sent = 0;
@@ -1353,13 +1396,16 @@ static void _handle_signal(int signo)
 	case SIGCONT:
 		debug3("got SIGCONT");
 		break;
+case SIGUSR1:
+MPIR_debug_gate=1;
+break;
 	default:
 		slurm_step_launch_fwd_signal(job->step_ctx, signo);
 		break;
 	}
 }
 
-static int _setup_signals()
+static int _setup_signals(void)
 {
 	int sigarray[] = {
 		SIGINT,  SIGQUIT, /*SIGTSTP,*/ SIGCONT, SIGTERM,
